Fix z-index navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,7 +174,7 @@ header {
     position: sticky !important;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 999;
     width: 100%;
     font-family: var(--font-primary);
     font-size: 1rem;
@@ -300,7 +300,7 @@ header {
     position: absolute;
     bottom: 20%;
     left: 12%;
-    z-index: 999;
+    z-index: 99;
     color: #FFF;
 }
 
@@ -638,12 +638,12 @@ header {
 /* Gallery */
 #gallery picture {
     position: relative;
-    z-index: 999;
+    z-index: 9999;
 }
 
-#gallery img {
+/* #gallery img {
     width: 100%;
-}
+} */
 
 /* Footer */
 footer {
